--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nab-landing-page",
-  "version": "0.1.0",
+  "name": "billion-landing-page",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "next": "15.5.3",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "typescript": "^5",
